<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tMainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_icons8_santander_24dp"
                    app:layout_constraintEnd_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivDados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="H,16:6"
        app:layout_constraintTop_toBottomOf="@id/tMainToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá George"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tMainToolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAgencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 2030"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvUsuario"
        app:layout_constraintStart_toStartOf="@id/tvUsuario"/>

    <TextView
        android:id="@+id/tvConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc 1020-3"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tvAgencia"
        app:layout_constraintStart_toEndOf="@id/tvAgencia"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_saldo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAgencia"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_monetization_on_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo_disponivel"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@id/iv_saldo"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo"

                />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="R$ 1.200,00"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/tv_saldo_disponivel"/>

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo_limite"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"/>
            <TextView
                android:id="@+id/tv_saldo_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="R$ 2.300,00"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"/>

            <View
                android:id="@+id/vw_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ver_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vw_linha"
                app:layout_constraintStart_toStartOf="@id/vw_linha"
                app:layout_constraintEnd_toEndOf="@id/vw_linha"
                android:textColor="@color/redSecundary"
                android:layout_margin="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_pagar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cv_transferir">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_pagar"/>

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pagar"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_transferir"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_saldo"
        app:layout_constraintStart_toEndOf="@id/cv_pagar"
        app:layout_constraintEnd_toStartOf="@id/cv_recarregar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_transferir"/>

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_transferir"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_recarregar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_saldo"
        app:layout_constraintStart_toEndOf="@id/cv_transferir"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_Recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_recarregar"/>

            <TextView
                android:id="@+id/tv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recarregar"
                app:layout_constraintTop_toBottomOf="@id/iv_Recarregar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/cv_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintStart_toStartOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        />

    <TextView
        android:id="@+id/tv_cartao_final_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3256"
        app:layout_constraintTop_toTopOf="@id/tv_cartao_final"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final"/>

</androidx.constraintlayout.widget.ConstraintLayout>